// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/checkbox/demo/basic.tsx extend context correctly 1`] = `
<div
  class="ant-checkbox-wrapper"
>
  <span
    class="ant-checkbox ant-wave-target"
  >
    <input
      class="ant-checkbox-input"
      type="checkbox"
    />
    <span
      class="ant-checkbox-inner"
    />
  </span>
  <span>
    Checkbox
  </span>
</div>
`;

exports[`renders components/checkbox/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/checkbox/demo/check-all.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-checkbox-wrapper"
  >
    <span
      class="ant-checkbox ant-checkbox-indeterminate ant-wave-target"
    >
      <input
        class="ant-checkbox-input"
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </span>
    <span>
      Check all
    </span>
  </div>,
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
  />,
  <div
    class="ant-checkbox-group"
  >
    <div
      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item"
    >
      <span
        class="ant-checkbox ant-wave-target ant-checkbox-checked"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </div>
    <div
      class="ant-checkbox-wrapper ant-checkbox-group-item"
    >
      <span
        class="ant-checkbox ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
          value="Pear"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </div>
    <div
      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item"
    >
      <span
        class="ant-checkbox ant-wave-target ant-checkbox-checked"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </div>
  </div>,
]
`;

exports[`renders components/checkbox/demo/check-all.tsx extend context correctly 2`] = `[]`;

exports[`renders components/checkbox/demo/controller.tsx extend context correctly 1`] = `
Array [
  <p
    style="margin-bottom: 20px;"
  />,
  <div
    class="ant-checkbox-wrapper ant-checkbox-wrapper-checked"
  >
    <span
      class="ant-checkbox ant-wave-target ant-checkbox-checked"
    >
      <input
        checked=""
        class="ant-checkbox-input"
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </span>
    <span>
      Checked-Enabled
    </span>
  </div>,
  <p />,
  <p>
    <button
      class="ant-btn ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-sm"
      type="button"
    >
      <span>
        Uncheck
      </span>
    </button>
    <button
      class="ant-btn ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-sm"
      style="margin: 0px 10px;"
      type="button"
    >
      <span>
        Disable
      </span>
    </button>
  </p>,
]
`;

exports[`renders components/checkbox/demo/controller.tsx extend context correctly 2`] = `
[
  "Warning: validateDOMNesting(...): %s cannot appear as a descendant of <%s>.%s",
]
`;

exports[`renders components/checkbox/demo/custom-line-width.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-checkbox-wrapper ant-checkbox-wrapper-checked"
  >
    <span
      class="ant-checkbox ant-wave-target ant-checkbox-checked"
    >
      <input
        checked=""
        class="ant-checkbox-input"
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </span>
  </div>,
  <div
    class="ant-checkbox-wrapper"
  >
    <span
      class="ant-checkbox ant-wave-target"
    >
      <input
        class="ant-checkbox-input"
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </span>
  </div>,
  <div
    class="ant-checkbox-wrapper ant-checkbox-wrapper-checked"
  >
    <span
      class="ant-checkbox ant-wave-target ant-checkbox-checked"
    >
      <input
        checked=""
        class="ant-checkbox-input"
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </span>
  </div>,
  <div
    class="ant-checkbox-wrapper"
  >
    <span
      class="ant-checkbox ant-wave-target"
    >
      <input
        class="ant-checkbox-input"
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </span>
  </div>,
]
`;

exports[`renders components/checkbox/demo/custom-line-width.tsx extend context correctly 2`] = `[]`;

exports[`renders components/checkbox/demo/debug-disable-popover.tsx extend context correctly 1`] = `
<div
  style="padding: 56px;"
>
  <div
    class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-wrapper-disabled"
  >
    <span
      class="ant-checkbox ant-wave-target ant-checkbox-checked ant-checkbox-disabled"
    >
      <input
        checked=""
        class="ant-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </span>
  </div>
  <div
    class="ant-popover ant-zoom-big-appear ant-zoom-big-appear-prepare ant-zoom-big ant-popover-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
  >
    <div
      class="ant-popover-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    />
    <div
      class="ant-popover-content"
    >
      <div
        class="ant-popover-inner"
        role="tooltip"
      >
        <div
          class="ant-popover-inner-content"
        >
          xxxx
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/checkbox/demo/debug-disable-popover.tsx extend context correctly 2`] = `
[
  "The above error occurred in the <input> component:

    at input
    at span
    at /Users/zcy/Documents/GitHubProject/ant-design/node_modules/rc-checkbox/lib/index.js:22:32
    at div
    at Wave (/Users/zcy/Documents/GitHubProject/ant-design/components/_util/wave/index.ts:19:5)
    at customizePrefixCls (/Users/zcy/Documents/GitHubProject/ant-design/components/checkbox/Checkbox.tsx:65:16)
    at children (/Users/zcy/Documents/GitHubProject/ant-design/components/config-provider/MotionWrapper.tsx:11:11)
    at ProviderChildren (/Users/zcy/Documents/GitHubProject/ant-design/components/config-provider/index.tsx:136:5)
    at ConfigProvider (/Users/zcy/Documents/GitHubProject/ant-design/components/config-provider/index.tsx:440:25)
    at div
    at div
    at App
    at children (/Users/zcy/Documents/GitHubProject/ant-design/node_modules/@ant-design/cssinjs/lib/StyleContext.js:65:24)
    at children (/Users/zcy/Documents/GitHubProject/ant-design/components/config-provider/MotionWrapper.tsx:11:11)
    at ProviderChildren (/Users/zcy/Documents/GitHubProject/ant-design/components/config-provider/index.tsx:136:5)
    at ConfigProvider (/Users/zcy/Documents/GitHubProject/ant-design/components/config-provider/index.tsx:440:25)

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://reactjs.org/link/error-boundaries to learn more about error boundaries.",
  "The above error occurred in the <input> component:

    at input
    at span
    at /Users/zcy/Documents/GitHubProject/ant-design/node_modules/rc-checkbox/lib/index.js:22:32
    at div
    at Wave (/Users/zcy/Documents/GitHubProject/ant-design/components/_util/wave/index.ts:19:5)
    at customizePrefixCls (/Users/zcy/Documents/GitHubProject/ant-design/components/checkbox/Checkbox.tsx:65:16)
    at div
    at _reactNode (/Users/zcy/Documents/GitHubProject/ant-design/components/space/Item.tsx:5:1)
    at div
    at useContext (/Users/zcy/Documents/GitHubProject/ant-design/components/space/index.tsx:34:69)
    at div
    at App
    at children (/Users/zcy/Documents/GitHubProject/ant-design/node_modules/@ant-design/cssinjs/lib/StyleContext.js:65:24)
    at children (/Users/zcy/Documents/GitHubProject/ant-design/components/config-provider/MotionWrapper.tsx:11:11)
    at ProviderChildren (/Users/zcy/Documents/GitHubProject/ant-design/components/config-provider/index.tsx:136:5)
    at ConfigProvider (/Users/zcy/Documents/GitHubProject/ant-design/components/config-provider/index.tsx:440:25)

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://reactjs.org/link/error-boundaries to learn more about error boundaries.",
  "The above error occurred in the <input> component:

    at input
    at span
    at /Users/zcy/Documents/GitHubProject/ant-design/node_modules/rc-checkbox/lib/index.js:22:32
    at div
    at Wave (/Users/zcy/Documents/GitHubProject/ant-design/components/_util/wave/index.ts:19:5)
    at customizePrefixCls (/Users/zcy/Documents/GitHubProject/ant-design/components/checkbox/Checkbox.tsx:65:16)
    at div
    at div
    at App
    at children (/Users/zcy/Documents/GitHubProject/ant-design/node_modules/@ant-design/cssinjs/lib/StyleContext.js:65:24)
    at children (/Users/zcy/Documents/GitHubProject/ant-design/components/config-provider/MotionWrapper.tsx:11:11)
    at ProviderChildren (/Users/zcy/Documents/GitHubProject/ant-design/components/config-provider/index.tsx:136:5)
    at ConfigProvider (/Users/zcy/Documents/GitHubProject/ant-design/components/config-provider/index.tsx:440:25)

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://reactjs.org/link/error-boundaries to learn more about error boundaries.",
  "Warning: [antd: Checkbox] \`value\` is not a valid prop, do you mean \`checked\`?",
]
`;

exports[`renders components/checkbox/demo/debug-line.tsx extend context correctly 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
    style="border: 1px solid red; margin-bottom: 16px;"
  >
    <div
      class="ant-space-item"
    >
      <div
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox ant-wave-target"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="light"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <div>
        Bamboo
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox ant-wave-target"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="little"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
        <span>
          Little
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
    style="border: 1px solid red; margin-bottom: 16px;"
  >
    <div
      class="ant-space-item"
    >
      <label
        class="ant-radio-wrapper"
      >
        <span
          class="ant-radio ant-wave-target"
        >
          <input
            class="ant-radio-input"
            type="radio"
            value="light"
          />
          <span
            class="ant-radio-inner"
          />
        </span>
      </label>
    </div>
    <div
      class="ant-space-item"
    >
      <div>
        Bamboo
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <label
        class="ant-radio-wrapper"
      >
        <span
          class="ant-radio ant-wave-target"
        >
          <input
            class="ant-radio-input"
            type="radio"
            value="little"
          />
          <span
            class="ant-radio-inner"
          />
        </span>
        <span>
          Little
        </span>
      </label>
    </div>
  </div>
  <div
    style="border: 1px solid red; margin-bottom: 16px; display: flex; align-items: center;"
  >
    <div
      class="ant-checkbox-wrapper"
    >
      <span
        class="ant-checkbox ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
          value="light"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
    </div>
    <div>
      Bamboo
    </div>
    <div
      class="ant-checkbox-wrapper"
    >
      <span
        class="ant-checkbox ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
          value="little"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Little
      </span>
    </div>
  </div>
  <div
    style="border: 1px solid red; margin-bottom: 16px; display: flex; align-items: center;"
  >
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="light"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
    </label>
    <div>
      Bamboo
    </div>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="little"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        Little
      </span>
    </label>
  </div>
  <div>
    <div
      class="ant-checkbox-wrapper"
    >
      <span
        class="ant-checkbox ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Aligned
      </span>
    </div>
  </div>
  <div>
    <div
      class="ant-checkbox-wrapper"
    >
      <span
        class="ant-checkbox ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        <span
          style="font-size: 32px;"
        >
          Aligned
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders components/checkbox/demo/debug-line.tsx extend context correctly 2`] = `
[
  "Warning: [antd: Checkbox] \`value\` is not a valid prop, do you mean \`checked\`?",
]
`;

exports[`renders components/checkbox/demo/disabled.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
  >
    <span
      class="ant-checkbox ant-wave-target ant-checkbox-disabled"
    >
      <input
        class="ant-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </span>
  </div>,
  <br />,
  <div
    class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
  >
    <span
      class="ant-checkbox ant-checkbox-indeterminate ant-wave-target ant-checkbox-disabled"
    >
      <input
        class="ant-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </span>
  </div>,
  <br />,
  <div
    class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
  >
    <span
      class="ant-checkbox ant-wave-target ant-checkbox-checked ant-checkbox-disabled"
    >
      <input
        checked=""
        class="ant-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </span>
  </div>,
]
`;

exports[`renders components/checkbox/demo/disabled.tsx extend context correctly 2`] = `
[
  "The above error occurred in the <input> component:

    at input
    at span
    at /Users/zcy/Documents/GitHubProject/ant-design/node_modules/rc-checkbox/lib/index.js:22:32
    at div
    at Wave (/Users/zcy/Documents/GitHubProject/ant-design/components/_util/wave/index.ts:19:5)
    at customizePrefixCls (/Users/zcy/Documents/GitHubProject/ant-design/components/checkbox/Checkbox.tsx:65:16)
    at div
    at /Users/zcy/Documents/GitHubProject/ant-design/components/checkbox/group.tsx:19:3
    at App
    at children (/Users/zcy/Documents/GitHubProject/ant-design/node_modules/@ant-design/cssinjs/lib/StyleContext.js:65:24)
    at children (/Users/zcy/Documents/GitHubProject/ant-design/components/config-provider/MotionWrapper.tsx:11:11)
    at ProviderChildren (/Users/zcy/Documents/GitHubProject/ant-design/components/config-provider/index.tsx:136:5)
    at ConfigProvider (/Users/zcy/Documents/GitHubProject/ant-design/components/config-provider/index.tsx:440:25)

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://reactjs.org/link/error-boundaries to learn more about error boundaries.",
  "The above error occurred in the <input> component:

    at input
    at span
    at /Users/zcy/Documents/GitHubProject/ant-design/node_modules/rc-checkbox/lib/index.js:22:32
    at div
    at Wave (/Users/zcy/Documents/GitHubProject/ant-design/components/_util/wave/index.ts:19:5)
    at customizePrefixCls (/Users/zcy/Documents/GitHubProject/ant-design/components/checkbox/Checkbox.tsx:65:16)
    at div
    at useContext (/Users/zcy/Documents/GitHubProject/ant-design/components/grid/col.tsx:52:45)
    at div
    at contentStyle (/Users/zcy/Documents/GitHubProject/ant-design/components/grid/Row.tsx:49:13)
    at div
    at /Users/zcy/Documents/GitHubProject/ant-design/components/checkbox/group.tsx:19:3
    at App
    at children (/Users/zcy/Documents/GitHubProject/ant-design/node_modules/@ant-design/cssinjs/lib/StyleContext.js:65:24)
    at children (/Users/zcy/Documents/GitHubProject/ant-design/components/config-provider/MotionWrapper.tsx:11:11)
    at ProviderChildren (/Users/zcy/Documents/GitHubProject/ant-design/components/config-provider/index.tsx:136:5)
    at ConfigProvider (/Users/zcy/Documents/GitHubProject/ant-design/components/config-provider/index.tsx:440:25)

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://reactjs.org/link/error-boundaries to learn more about error boundaries.",
]
`;

exports[`renders components/checkbox/demo/group.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-checkbox-group"
  >
    <div
      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item"
    >
      <span
        class="ant-checkbox ant-wave-target ant-checkbox-checked"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </div>
    <div
      class="ant-checkbox-wrapper ant-checkbox-group-item"
    >
      <span
        class="ant-checkbox ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
          value="Pear"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </div>
    <div
      class="ant-checkbox-wrapper ant-checkbox-group-item"
    >
      <span
        class="ant-checkbox ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </div>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-checkbox-group"
  >
    <div
      class="ant-checkbox-wrapper ant-checkbox-group-item"
    >
      <span
        class="ant-checkbox ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </div>
    <div
      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item"
    >
      <span
        class="ant-checkbox ant-wave-target ant-checkbox-checked"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
          value="Pear"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </div>
    <div
      class="ant-checkbox-wrapper ant-checkbox-group-item"
    >
      <span
        class="ant-checkbox ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </div>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-checkbox-group"
  >
    <div
      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-wrapper-disabled ant-checkbox-group-item"
    >
      <span
        class="ant-checkbox ant-wave-target ant-checkbox-checked ant-checkbox-disabled"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          disabled=""
          type="checkbox"
          value="Apple"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </div>
    <div
      class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled ant-checkbox-group-item"
    >
      <span
        class="ant-checkbox ant-wave-target ant-checkbox-disabled"
      >
        <input
          class="ant-checkbox-input"
          disabled=""
          type="checkbox"
          value="Pear"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </div>
    <div
      class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled ant-checkbox-group-item"
    >
      <span
        class="ant-checkbox ant-wave-target ant-checkbox-disabled"
      >
        <input
          class="ant-checkbox-input"
          disabled=""
          type="checkbox"
          value="Orange"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </div>
  </div>,
]
`;

exports[`renders components/checkbox/demo/group.tsx extend context correctly 2`] = `[]`;

exports[`renders components/checkbox/demo/layout.tsx extend context correctly 1`] = `
<div
  class="ant-checkbox-group"
  style="width: 100%;"
>
  <div
    class="ant-row"
  >
    <div
      class="ant-col ant-col-8"
    >
      <div
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox ant-wave-target"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="A"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
        <span>
          A
        </span>
      </div>
    </div>
    <div
      class="ant-col ant-col-8"
    >
      <div
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox ant-wave-target"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="B"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
        <span>
          B
        </span>
      </div>
    </div>
    <div
      class="ant-col ant-col-8"
    >
      <div
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox ant-wave-target"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="C"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
        <span>
          C
        </span>
      </div>
    </div>
    <div
      class="ant-col ant-col-8"
    >
      <div
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox ant-wave-target"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="D"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
        <span>
          D
        </span>
      </div>
    </div>
    <div
      class="ant-col ant-col-8"
    >
      <div
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox ant-wave-target"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="E"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
        <span>
          E
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/checkbox/demo/layout.tsx extend context correctly 2`] = `[]`;
